--- a/utilities/styles.css
+++ b/utilities/styles.css
@@ -11,7 +11,7 @@ ul {
 
 li {
     float : left;
-    width : 25%;
+    width : 20%;
 }
 
 a:link, a:visited {
@@ -26,6 +26,10 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
+    background-color : #7A991A;
+}
+
+#currentpage {
     background-color : #7A991A;
 }
 
